--- a/SEDUCAOEM30S.HTML
+++ b/SEDUCAOEM30S.HTML
@@ -1,11 +1,9 @@
-<html><head><base href="www.comoconquistaremela.com">
+<html><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como Seduzir em 30 Segundos | O Guia Definitivo</title>
-        <link rel="icon" href="SEDUÇÃO PARA HOTMART.png" type="image/png">
+        <link rel="icon" href="SEDUÇÃO PARA HOTMART.png">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
-
         * {
             margin: 0;
             padding: 0;
@@ -20,8 +18,6 @@
 
         .hero {
             min-height: 100vh;
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)), 
-                        url('https://images.unsplash.com/photo-silhouette-couple-sunset') center/cover;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -275,7 +271,6 @@
             100% { transform: translateX(0); }
         }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="hero">
